vertical refinement finished

--- a/tests/horizontalRefinementtest.ipynb
+++ b/tests/horizontalRefinementtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,6 @@
     "            for v,w,weight in allEdges:\n",
     "                if weight['weight']>-1:\n",
     "                    edges.append((v,w))\n",
-    "            print(edges)\n",
     "                        \n",
     "            # create the connected components\n",
     "            for node, dict in list(subgraph.nodes(data=True)):\n",
@@ -148,8 +147,8 @@
     "    for label,components in connectedComponents:\n",
     "        maxSize = 0\n",
     "        for component in components:\n",
-    "            if len(component) > maxSize:\n",
-    "                maxSize=len(component)\n",
+    "            if len(component[0]) > maxSize:\n",
+    "                maxSize=len(component[0])\n",
     "        sizes.append([label, maxSize])\n",
     "    return sizes\n",
     "\n"
@@ -157,19 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 3)]\n",
-      "[(2, 4), (4, 5)]\n",
-      "[(1, 3)]\n",
-      "[(2, 4), (4, 5)]\n",
-      "[['a', [[1], [5]]], ['b', [[2, 4]]]]\n",
-      "[['a', 1], ['b', 2]]\n"
+      "[['a', [[1], [5]]], ['b', [[3, 4]]]]\n",
+      "\n",
+      " [['a', 1], ['b', 2]]\n"
      ]
     }
    ],
@@ -177,9 +173,284 @@
     "comps=createConnectedComponents(graphs, ['a','b'])\n",
     "print(comps)\n",
     "\n",
-    "sizes=getMaxSizes(comps)\n",
-    "print(sizes)"
+    "#sizes=getMaxSizes(comps)\n",
+    "print(\"\\n\",sizes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inSameVariant(component1, component2, variants):\n",
+    "    \"\"\"\n",
+    "    Auxiliary function to determine if two connected components corresponding to the same label are in the same variant (according to section 5.4 in the paper)\n",
+    "    \n",
+    "    :param component1: first component given as a list of event IDs\n",
+    "    :param component2: second component given as a list of event IDs\n",
+    "    :param variants: list of variants given as a list of tuples (eventID, event label), i.e., a list of lists of tuples\n",
+    "    :returns: boolean; True if the connected components are in the same variant, False otherwise\n",
+    "    \"\"\"\n",
+    "    for event1 in component1:\n",
+    "        for event2 in component2:\n",
+    "            for variant in variants:\n",
+    "                contains1=False\n",
+    "                contains2=False\n",
+    "                for eventID,_ in variant:\n",
+    "                    if event1==eventID:\n",
+    "                        contains1=True\n",
+    "                    if event2==eventID:\n",
+    "                        contains2=True\n",
+    "                if contains1 and contains2:\n",
+    "                    return True\n",
+    "        \n",
+    "    return False\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools as it\n",
+    "\n",
+    "def ComponentsInSameVariant(connectedComponents, variants):\n",
+    "    newConnectedComponents=[]\n",
+    "\n",
+    "    for component in connectedComponents:\n",
+    "        label=component[0]\n",
+    "        sameVariant=component[1]\n",
+    "        noMatch=[]\n",
+    "        for a, b in it.combinations(sameVariant, 2):\n",
+    "            if inSameVariant(a, b, variants):\n",
+    "                continue\n",
+    "            else: \n",
+    "                sameVariant.remove(b)\n",
+    "                noMatch.append(b)\n",
+    "        newConnectedComponents.append([label, sameVariant])\n",
+    "        if len(noMatch)>1:\n",
+    "            newConnectedComponents.append(ComponentsInSameVariant([[label,noMatch]], variants))\n",
+    "        if len(noMatch)==1:\n",
+    "            newConnectedComponents.append([label, noMatch])\n",
+    "\n",
+    "\n",
+    "    return newConnectedComponents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', [[1]]], ['b', [[3, 4]]]]\n",
+      "[['a', [[1]]], ['b', [[3, 4]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comps)\n",
+    "\n",
+    "sameVarcomp=ComponentsInSameVariant(comps, [[[1,'a'],[2,'b'],[3,'c']],[[4,'b'],[5,'a']]])\n",
+    "print(sameVarcomp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inSameVariant([1,5],[2,4], [[[1,'a'],[2,'b'],[3,'c']],[[4,'b'],[5,'a']]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPosition(event, variants):\n",
+    "    \"\"\"\n",
+    "    Auxiliary function to determine the position of an event given its event ID    \n",
+    "    \n",
+    "    :param event: event ID of the event we need the position of\n",
+    "    :param variants: list of variants given as a list of tuples (eventID, event label), i.e., a list of lists of tuples\n",
+    "    :returns: integer representing the position of the event in its corresponding variant\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for variant in variants:\n",
+    "        for eventID,_ in variant:\n",
+    "            if event==eventID:\n",
+    "                return event-variant[0][0]+1\n",
+    "        \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getPosition(5, [[[1,'a'],[2,'b'],[3,'c']],[[4,'b'],[5,'a']]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def getAveragePositions(connectedComponents, variants):\n",
+    "    averagePositions=[]\n",
+    "    for Labelcomponents in connectedComponents:\n",
+    "        label=Labelcomponents[0]\n",
+    "        components=Labelcomponents[1]\n",
+    "        averages=[]\n",
+    "        for component in components:\n",
+    "            positions = []\n",
+    "            for event in component:\n",
+    "                positions.append(getPosition(event, variants))                    \n",
+    "            averages.append([component, np.average(positions)])\n",
+    "        \n",
+    "        averages = sorted(averages, key= lambda x: x[1])\n",
+    "\n",
+    "        averagePositions.append([label, averages])\n",
+    "    return averagePositions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', [[1]]], ['b', [[3, 4]]]]\n",
+      "[['a', [[[1], 2.0]]], ['b', [[[3, 4], 2.5]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(comps)\n",
+    "print(getAveragePositions(comps,[[[0, 'a'], [1,'a'],[2,'b'],[3,'c']],[[4,'b']],[[5,'a']]] ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verticalRefinement(graphList, candidateLabels, variants, threshold):\n",
+    "    \n",
+    "    # first, get the connected components\n",
+    "    connectedComponents=createConnectedComponents(graphList, candidateLabels)\n",
+    "    \n",
+    "    # then, get the connected components in the same variant\n",
+    "    sameVariants=ComponentsInSameVariant(connectedComponents, variants)\n",
+    "\n",
+    "    # get the sorted components with their average position\n",
+    "    averagePositions=getAveragePositions(sameVariants, variants)\n",
+    "\n",
+    "    # get the maximal sizes for the connected components in the same variant\n",
+    "    maxSizes=getMaxSizes(averagePositions)\n",
+    "\n",
+    "    # start the refinement for each set of connected components in the same variant\n",
+    "    counter=0\n",
+    "    lengthComponents=len(averagePositions)\n",
+    "    for i in range(lengthComponents):\n",
+    "        pairs=averagePositions[i]\n",
+    "        label=pairs[0]        \n",
+    "        eventPosition=pairs[1]\n",
+    "        maxSize=maxSizes[i]\n",
+    "        length=len(eventPosition)\n",
+    "\n",
+    "        for j in range(length):\n",
+    "            if j==0 or len(eventPosition[j][1])>= threshold*maxSize:\n",
+    "                counter +=1\n",
+    "                \n",
+    "            for subgraph in graphList:\n",
+    "                for node, dict in list(subgraph.nodes(data=True)):\n",
+    "                    for event in eventPosition[j][0]:\n",
+    "\n",
+    "                        if node==event:\n",
+    "                            dict['newLabel'] += \".\"+str(counter)\n",
+    "\n",
+    "    return graphList\n",
+    "            \n",
+    "                \n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, {'curLabel': 'a', 'newLabel': 'a1.1'}), (2, {'curLabel': 'c', 'newLabel': 'c'})]\n",
+      "[(3, {'curLabel': 'b', 'newLabel': 'b2.3'}), (4, {'curLabel': 'b', 'newLabel': 'b2.3'}), (5, {'curLabel': 'a', 'newLabel': 'a2.2'})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = nx.Graph()\n",
+    "G.add_nodes_from([(1, {'curLabel':'a', 'newLabel':'a'}),(3,{'curLabel':'b', 'newLabel':'b'}), (2,{'curLabel':'c', 'newLabel':'c'}),(4,{'curLabel':'b', 'newLabel':'b'}), (5,{'curLabel':'a', 'newLabel':'a'})])\n",
+    "G.add_edges_from([(1, 2, {'weight': 0}), (4, 5, {'weight': 0}), (3, 4, {'weight': 0.05}), (1,5,{'weight':0.7})])\n",
+    "\n",
+    "subgraphs=clusterDetection(G,0.5)\n",
+    "\n",
+    "graphs=horizontalRefinement(['a','b'], subgraphs)\n",
+    "\n",
+    "\n",
+    "graphs1=verticalRefinement(subgraphs, ['a','b'], [[(1,'a'),(2,'c')],[(4,'b'),(5,'a')],[(3,'b')]], 0.6)\n",
+    "\n",
+    "print(graphs1[0].nodes(data=True))\n",
+    "print(graphs1[1].nodes(data=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
