--- a/tests/Running_Example_Test.ipynb
+++ b/tests/Running_Example_Test.ipynb
@@ -209,8 +209,8 @@
     "    for pair in mapping:\n",
     "        p1 = pair[0]-firstId1\n",
     "        p2 = pair[1]-firstId2\n",
-    "        sum += len(pred1[p1])+len(pred2[p2])-len(pred1[p1].intersection(pred2[p2])) #number of distinct predecessors\n",
-    "        sum += len(succ1[p1])+len(succ2[p2])-len(succ1[p1].intersection(succ2[p2])) #number of distinct successors\n",
+    "        sum += len(pred1[p1])+len(pred2[p2])-2*len(pred1[p1].intersection(pred2[p2])) #number of distinct predecessors\n",
+    "        sum += len(succ1[p1])+len(succ2[p2])-2*len(succ1[p1].intersection(succ2[p2])) #number of distinct successors\n",
     "    return sum\n",
     "\n",
     "def costMapping(cp,variant1,variant2,mapping):\n",
@@ -232,8 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimalMapping(variant1, variant2, matrixx, cp, bestMappings):\n",
-    "    \n",
+    "def optimalMapping(variants, variant1, variant2, matrixx, cp):\n",
     "    pos_variant1 = variants.index(variant1)\n",
     "    pos_variant2 = variants.index(variant2)\n",
     "    possible_mappings = possibleMappings(variant1, variant2)\n",
@@ -245,9 +244,12 @@
     "            if cost_new < cost_best:\n",
     "                best_mapping = mapping\n",
     "                cost_best = cost_new\n",
-    "    matrixx[pos_variant1, pos_variant2] = cost_best #entry ij in matrix updated with best cost\n",
-    "    matrixx[pos_variant2, pos_variant1] = cost_best #entry ji in matrix updated with best cost\n",
-    "    bestMappings.append((best_mapping,cost_best))\n",
+    "        matrixx[pos_variant1, pos_variant2] = cost_best #entry ij in matrix updated with best cost\n",
+    "        matrixx[pos_variant2, pos_variant1] = cost_best #entry ji in matrix updated with best cost\n",
+    "        #bestMappings.append((best_mapping,cost_best))\n",
+    "    else:\n",
+    "        matrixx[pos_variant1, pos_variant2] = -42 #entry ij in matrix updated with best cost\n",
+    "        matrixx[pos_variant2, pos_variant1] = -42 #entry ji in matrix updated with best cost\n",
     "    return best_mapping, cost_best"
    ]
   },
@@ -317,9 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'customParameters' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-b6e3895d24ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m cp = customParameters(candidateLabels = [\"decide\", \"examine casually\"],\n\u001b[0m\u001b[0;32m      2\u001b[0m                       \u001b[0mhorizontalThreshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                       \u001b[0mverticalThreshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                       \u001b[0mweightStructure\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                       \u001b[0mweightMatch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'customParameters' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cp = customParameters(candidateLabels = [\"decide\", \"examine casually\"],\n",
     "                      horizontalThreshold = 0.5,\n",
@@ -424,23 +438,22 @@
     }
    ],
    "source": [
-    "bestmappings = [] #list containing all best mappings\n",
+    "bestMappings = [] #list containing all best mappings\n",
     "\n",
     "all_pairs = list(combinations(variants, 2))\n",
     "for pair in all_pairs:\n",
-    "    optimal = optimalMapping(pair[0],pair[1],C,cp, bestmappings)\n",
+    "    optimal = optimalMapping(variants, pair[0],pair[1],C,cp)\n",
     "    best_mapping = optimal[0]\n",
     "    best_cost = optimal[1]\n",
+    "    bestMappings.append((best_mapping,best_cost))\n",
     "    \n",
     "maxCost = np.amax(C)\n",
     "print(\"MaxCost used for normalization:\", maxCost)\n",
     "C = C/maxCost\n",
     "print(\"Cost Matrix C: \\n\", C)\n",
-    "#print(17.1/maxElement) Entry is right\n",
+    "print(\"No of mappings:\", len(bestMappings))\n",
     "\n",
-    "print(\"No of mappings:\", len(bestmappings))\n",
-    "\n",
-    "print(bestmappings)"
+    "print(bestMappings)"
    ]
   },
   {
