--- a/tests/Running_Example_Test.ipynb
+++ b/tests/Running_Example_Test.ipynb
@@ -10,13 +10,16 @@
     "import os\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "from pm4py.objects.log.importer.xes import factory as xes_import_factory\n",
     "import itertools as it\n",
-    "from itertools import combinations\n",
     "from operator import itemgetter\n",
     "from refiningEventLabels.lib.graph.graphTool import graphTool \n",
     "from refiningEventLabels.lib.objects.customParameters import customParameters\n",
-    "from refiningEventLabels.lib.preprocessingLog.DBTool import DBTool "
+    "from refiningEventLabels.lib.refinement.labelRefinement import verticalRefinement, horizontalRefinement\n",
+    "from refiningEventLabels.lib.eventLogProcessing.DBTool import DBTool \n",
+    "from refiningEventLabels.lib.eventLogProcessing.postProcessing import eventLogRenaming\n",
+    "from refiningEventLabels.lib.costFunction.mappings import createEventIDs, positionsOfCandidates\n",
+    "from refiningEventLabels.lib.costFunction.cost import bestMappings\n",
+    "from pm4py.objects.log.importer.xes import factory as xes_import_factory"
    ]
   },
   {
@@ -222,8 +225,7 @@
     "    cost_struc = costStructure(variant1, variant2, mapping)\n",
     "    cost_nomatch = costNoMatch(variant1, variant2, mapping)\n",
     "    cost_match = costMatched(variant1, variant2, mapping)\n",
-    "    return wm*cost_match + ws*cost_struc + wn*cost_nomatch\n",
-    "\n"
+    "    return wm*cost_match + ws*cost_struc + wn*cost_nomatch"
    ]
   },
   {
@@ -461,7 +463,7 @@
      "output_type": "stream",
      "text": [
       "Positions of candidates: \n",
-      " [3, 7, 1, 12, 11, 17, 22, 20, 27, 31, 35, 25, 30, 33, 40]\n"
+      " [1, 3, 7, 11, 12, 17, 20, 22, 25, 30, 33, 27, 31, 35, 40]\n"
      ]
     }
    ],
@@ -480,7 +482,7 @@
    "source": [
     "G = graphTool()\n",
     "G.createGraphFromVariants(variants)\n",
-    "G.addOptimalMapping(bestMappings,maxCost,pos_candidates)"
+    "G.addOptimalMappings(bestMappings,maxCost,pos_candidates)"
    ]
   },
   {
@@ -493,7 +495,7 @@
      "output_type": "stream",
      "text": [
       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41]\n",
-      "[(0, 1, {'weight': -1}), (1, 2, {'weight': -1}), (1, 11, {'weight': 0.5771812080536912}), (1, 20, {'weight': 0.49664429530201337}), (1, 25, {'weight': 0.523489932885906}), (2, 3, {'weight': -1}), (3, 4, {'weight': -1}), (3, 12, {'weight': 0.5771812080536912}), (3, 22, {'weight': 0.49664429530201337}), (3, 27, {'weight': 0.523489932885906}), (3, 40, {'weight': 0.6845637583892616}), (4, 5, {'weight': -1}), (5, 6, {'weight': -1}), (6, 7, {'weight': -1}), (7, 8, {'weight': -1}), (7, 17, {'weight': 0.6845637583892616}), (9, 10, {'weight': -1}), (10, 11, {'weight': -1}), (11, 12, {'weight': -1}), (11, 20, {'weight': 0.09395973154362414}), (11, 25, {'weight': 0.6577181208053691}), (12, 13, {'weight': -1}), (12, 17, {'weight': 0.3892617449664429}), (12, 22, {'weight': 0.09395973154362414}), (12, 27, {'weight': 0.6577181208053691}), (12, 40, {'weight': 0.37583892617449655}), (14, 15, {'weight': -1}), (15, 16, {'weight': -1}), (16, 17, {'weight': -1}), (17, 18, {'weight': -1}), (17, 22, {'weight': 0.37583892617449655}), (17, 35, {'weight': 0.9798657718120805}), (17, 40, {'weight': 0.09395973154362414}), (19, 20, {'weight': -1}), (20, 21, {'weight': -1}), (20, 25, {'weight': 0.6040268456375839}), (21, 22, {'weight': -1}), (22, 23, {'weight': -1}), (22, 27, {'weight': 0.6040268456375839}), (22, 40, {'weight': 0.3892617449664429}), (24, 25, {'weight': -1}), (25, 26, {'weight': -1}), (26, 27, {'weight': -1}), (27, 28, {'weight': -1}), (28, 29, {'weight': -1}), (29, 30, {'weight': -1}), (30, 31, {'weight': -1}), (31, 32, {'weight': -1}), (32, 33, {'weight': -1}), (33, 34, {'weight': -1}), (34, 35, {'weight': -1}), (35, 36, {'weight': -1}), (35, 40, {'weight': 1.0}), (37, 38, {'weight': -1}), (38, 39, {'weight': -1}), (39, 40, {'weight': -1}), (40, 41, {'weight': -1})]\n"
+      "[(0, 1, {'weight': -1}), (0, 9, {'weight': 0.5771812080536912}), (0, 14, {'weight': 0.6845637583892616}), (0, 19, {'weight': 0.49664429530201337}), (0, 24, {'weight': 0.523489932885906}), (0, 37, {'weight': 0.6845637583892616}), (1, 2, {'weight': -1}), (1, 11, {'weight': 0.5771812080536912}), (1, 20, {'weight': 0.49664429530201337}), (1, 25, {'weight': 0.523489932885906}), (2, 3, {'weight': -1}), (2, 10, {'weight': 0.5771812080536912}), (2, 21, {'weight': 0.49664429530201337}), (2, 26, {'weight': 0.523489932885906}), (2, 38, {'weight': 0.6845637583892616}), (3, 4, {'weight': -1}), (3, 12, {'weight': 0.5771812080536912}), (3, 22, {'weight': 0.49664429530201337}), (3, 27, {'weight': 0.523489932885906}), (3, 40, {'weight': 0.6845637583892616}), (4, 5, {'weight': -1}), (4, 28, {'weight': 0.523489932885906}), (5, 6, {'weight': -1}), (5, 15, {'weight': 0.6845637583892616}), (5, 39, {'weight': 0.6845637583892616}), (6, 7, {'weight': -1}), (6, 16, {'weight': 0.6845637583892616}), (7, 8, {'weight': -1}), (8, 13, {'weight': 0.5771812080536912}), (8, 23, {'weight': 0.49664429530201337}), (9, 10, {'weight': -1}), (9, 14, {'weight': 0.3892617449664429}), (9, 19, {'weight': 0.09395973154362414}), (9, 24, {'weight': 0.6577181208053691}), (9, 37, {'weight': 0.37583892617449655}), (10, 11, {'weight': -1}), (10, 16, {'weight': 0.3892617449664429}), (10, 21, {'weight': 0.09395973154362414}), (10, 26, {'weight': 0.6577181208053691}), (10, 38, {'weight': 0.37583892617449655}), (11, 12, {'weight': -1}), (11, 20, {'weight': 0.09395973154362414}), (12, 13, {'weight': -1}), (12, 22, {'weight': 0.09395973154362414}), (13, 23, {'weight': 0.09395973154362414}), (14, 15, {'weight': -1}), (14, 19, {'weight': 0.37583892617449655}), (14, 24, {'weight': 0.9798657718120805}), (14, 37, {'weight': 0.09395973154362414}), (15, 16, {'weight': -1}), (15, 39, {'weight': 0.09395973154362414}), (16, 17, {'weight': -1}), (16, 21, {'weight': 0.37583892617449655}), (16, 34, {'weight': 0.9798657718120805}), (16, 38, {'weight': 0.09395973154362414}), (17, 18, {'weight': -1}), (17, 35, {'weight': 0.9798657718120805}), (17, 40, {'weight': 0.09395973154362414}), (18, 36, {'weight': 0.9798657718120805}), (18, 41, {'weight': 0.09395973154362414}), (19, 20, {'weight': -1}), (19, 24, {'weight': 0.6040268456375839}), (19, 37, {'weight': 0.3892617449664429}), (20, 21, {'weight': -1}), (20, 25, {'weight': 0.6040268456375839}), (21, 22, {'weight': -1}), (21, 26, {'weight': 0.6040268456375839}), (21, 38, {'weight': 0.3892617449664429}), (22, 23, {'weight': -1}), (24, 25, {'weight': -1}), (24, 37, {'weight': 1.0}), (25, 26, {'weight': -1}), (26, 27, {'weight': -1}), (27, 28, {'weight': -1}), (28, 29, {'weight': -1}), (29, 30, {'weight': -1}), (30, 31, {'weight': -1}), (31, 32, {'weight': -1}), (32, 33, {'weight': -1}), (33, 34, {'weight': -1}), (34, 35, {'weight': -1}), (34, 38, {'weight': 1.0}), (35, 36, {'weight': -1}), (35, 40, {'weight': 1.0}), (36, 41, {'weight': 1.0}), (37, 38, {'weight': -1}), (38, 39, {'weight': -1}), (39, 40, {'weight': -1}), (40, 41, {'weight': -1})]\n"
      ]
     }
    ],
@@ -572,7 +574,7 @@
     "print(\"\\n refined first subgraph: \\n\", graphs[0].nodes(data=True))\n",
     "print(\"\\n refined second subgraph: \\n\",graphs[1].nodes(data=True))\n",
     "\n",
-    "print( \"\\n number of subgraphs:\",len(subgraphs))"
+    "print( \"\\n number of subgraphs:\",len( subgraphs))"
    ]
   },
   {
@@ -609,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, {'curLabel': 'register request', 'newLabel': 'register request'}), (1, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (2, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (3, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (4, {'curLabel': 'reinitiate request', 'newLabel': 'reinitiate request'}), (5, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (6, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (7, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (8, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (9, {'curLabel': 'register request', 'newLabel': 'register request'}), (10, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (11, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (12, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (13, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (14, {'curLabel': 'register request', 'newLabel': 'register request'}), (15, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (16, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (17, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (18, {'curLabel': 'reject request', 'newLabel': 'reject request'}), (19, {'curLabel': 'register request', 'newLabel': 'register request'}), (20, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (21, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (22, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (23, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (37, {'curLabel': 'register request', 'newLabel': 'register request'}), (38, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (39, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (40, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (41, {'curLabel': 'reject request', 'newLabel': 'reject request'})] \n",
+      "[(0, {'curLabel': 'register request', 'newLabel': 'register request'}), (1, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (2, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (3, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (4, {'curLabel': 'reinitiate request', 'newLabel': 'reinitiate request'}), (5, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (6, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (7, {'curLabel': 'decide', 'newLabel': 'decide1.3'}), (8, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (9, {'curLabel': 'register request', 'newLabel': 'register request'}), (10, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (11, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (12, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (13, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (14, {'curLabel': 'register request', 'newLabel': 'register request'}), (15, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (16, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (17, {'curLabel': 'decide', 'newLabel': 'decide1.2'}), (18, {'curLabel': 'reject request', 'newLabel': 'reject request'}), (19, {'curLabel': 'register request', 'newLabel': 'register request'}), (20, {'curLabel': 'examine casually', 'newLabel': 'examine casually1.1'}), (21, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (22, {'curLabel': 'decide', 'newLabel': 'decide1.1'}), (23, {'curLabel': 'pay compensation', 'newLabel': 'pay compensation'}), (37, {'curLabel': 'register request', 'newLabel': 'register request'}), (38, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (39, {'curLabel': 'examine thoroughly', 'newLabel': 'examine thoroughly'}), (40, {'curLabel': 'decide', 'newLabel': 'decide1.2'}), (41, {'curLabel': 'reject request', 'newLabel': 'reject request'})] \n",
       "\n",
       "[(32, {'curLabel': 'reinitiate request', 'newLabel': 'reinitiate request'}), (33, {'curLabel': 'examine casually', 'newLabel': 'examine casually2.3'}), (34, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (35, {'curLabel': 'decide', 'newLabel': 'decide2.3'}), (36, {'curLabel': 'reject request', 'newLabel': 'reject request'}), (24, {'curLabel': 'register request', 'newLabel': 'register request'}), (25, {'curLabel': 'examine casually', 'newLabel': 'examine casually2.1'}), (26, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (27, {'curLabel': 'decide', 'newLabel': 'decide2.1'}), (28, {'curLabel': 'reinitiate request', 'newLabel': 'reinitiate request'}), (29, {'curLabel': 'check ticket', 'newLabel': 'check ticket'}), (30, {'curLabel': 'examine casually', 'newLabel': 'examine casually2.2'}), (31, {'curLabel': 'decide', 'newLabel': 'decide2.2'})] \n",
       "\n"
@@ -697,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -797,76 +799,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " case index: 0  case id: 3\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: examine casually1.1\n",
-      "event index: 2  event activity: check ticket\n",
-      "event index: 3  event activity: decide1.1\n",
-      "event index: 4  event activity: reinitiate request\n",
-      "event index: 5  event activity: examine thoroughly\n",
-      "event index: 6  event activity: check ticket\n",
-      "event index: 7  event activity: decide1.1\n",
-      "event index: 8  event activity: pay compensation\n",
-      "\n",
-      " case index: 1  case id: 2\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: check ticket\n",
-      "event index: 2  event activity: examine casually1.1\n",
-      "event index: 3  event activity: decide1.1\n",
-      "event index: 4  event activity: pay compensation\n",
-      "\n",
-      " case index: 2  case id: 1\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: examine thoroughly\n",
-      "event index: 2  event activity: check ticket\n",
-      "event index: 3  event activity: decide1.1\n",
-      "event index: 4  event activity: reject request\n",
-      "\n",
-      " case index: 3  case id: 6\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: examine casually1.1\n",
-      "event index: 2  event activity: check ticket\n",
-      "event index: 3  event activity: decide1.1\n",
-      "event index: 4  event activity: pay compensation\n",
-      "\n",
-      " case index: 4  case id: 5\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: examine casually2.1\n",
-      "event index: 2  event activity: check ticket\n",
-      "event index: 3  event activity: decide2.1\n",
-      "event index: 4  event activity: reinitiate request\n",
-      "event index: 5  event activity: check ticket\n",
-      "event index: 6  event activity: examine casually2.2\n",
-      "event index: 7  event activity: decide2.2\n",
-      "event index: 8  event activity: reinitiate request\n",
-      "event index: 9  event activity: examine casually2.3\n",
-      "event index: 10  event activity: check ticket\n",
-      "event index: 11  event activity: decide2.3\n",
-      "event index: 12  event activity: reject request\n",
-      "\n",
-      " case index: 5  case id: 4\n",
-      "event index: 0  event activity: register request\n",
-      "event index: 1  event activity: check ticket\n",
-      "event index: 2  event activity: examine thoroughly\n",
-      "event index: 3  event activity: decide1.1\n",
-      "event index: 4  event activity: reject request\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for case_index, case in enumerate(log):\n",
     "    print(\"\\n case index: %d  case id: %s\" % (case_index, case.attributes[\"concept:name\"]))\n",
     "    for event_index, event in enumerate(case):\n",
     "        print(\"event index: %d  event activity: %s\" % (event_index, event[\"concept:name\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -892,7 +847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
