added optimized number of possible combinations, added small event log

--- a/tests/mappings.ipynb
+++ b/tests/mappings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(0, 5), (1, 6), (3, 7), (4, 9)],\n",
+       " [(0, 5), (2, 6), (3, 7), (4, 9)],\n",
+       " [(0, 5), (1, 6), (3, 8), (4, 9)],\n",
+       " [(0, 5), (2, 6), (3, 8), (4, 9)]]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#improved version, tested for huge number of variants and events\n",
+    "m = [(b,(a,c)) for (a,b) in v1 for (c,d) in v2 if b == d]\n",
+    "d = {i: [] for i in s1.intersection(s2)}\n",
+    "\n",
+    "for (k, v) in m:\n",
+    "    if k in d:\n",
+    "        d[k].append(v)\n",
+    "\n",
+    "[sorted(list(d), key = lambda p: p[0]) for d in (it.product(*d.values()))]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -71,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0  "
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
