--- a/User Manual/User Manual.tex
+++ b/User Manual/User Manual.tex
@@ -96,10 +96,15 @@ In the following chapters, the usage of this web service will be explained.
 
 \section{The Start Page}
 
-The start page of our web service consists of different parts, which will be explained in the following subsections. Namely, we have the parts "Upload Event Log for refining", "Customize", "Last uploaded files" and "Last refined files".
+The start page of our web service consists of different parts, which will be explained in the following subsections. Namely, we have the parts "Upload Event Log for refining" (1), "Customize" (2), "Last uploaded files" (3) and "Last refined files" (4), which can be viewed in Figure 1.
+
+\begin{figure}[h]
+\includegraphics[scale=0.42]{startpage.png}
+\caption{Overview of the start page with the different parts marked in red numbers}
+\end{figure}
 
 \subsection{Upload Event Log for refining}
-In this part of the start page, an event log can be uploaded. In order to do so, the user can either directly type in a path to a file or use the "search" button to search local files on your pc. Afterwards, he has to press the "Upload files" button in order to upload the selected file, he can add a comment on the file in the blanc box and press submit to start the upload. 
+In this part of the start page, an event log can be uploaded. In order to do so, the user can either directly type in a path to a file and press the "Upload files" button or he can use the "search" button to search local files on your pc or drag a file into the big box with "upload file" written in it. Afterwards, he has to press the "Upload files" button in order to upload the selected file, he can add a comment on the file in the blanc box and press submit to start the upload. 
 
 In order to successfully upload a file, this file has to be in XES or csv format, otherwise an error will occur. 
 
@@ -107,10 +112,10 @@ In order to successfully upload a file, this file has to be in XES or csv format
 In this section, the user can adjust the thresholds in order to fit his needs. To do so, he can either adjust them using the provided slide control or by typing them manually. The thresholds the user can adjust are the horizontal threshold, the vertical threshold, the weight structure, the weight for matched pairs of actions and the weight for not matched pairs of actions.
 
 \subsection{Last uploaded files}
-In this part of the start page, the user can see up to five of his last uploaded files and select them in order to apply the algorithm again. These files are not refined, but equal the originally uploaded files
+In this part of the start page, the user can see up to five of his last uploaded files. These files are not refined yet.
 
 \subsection{Last refined files}
-In this part of the start page, the user can see up to five of his last refined files and download them again. These files are already refined.
+In this part of the start page, the user can see up to five of his last refined files. These files are already refined.
 
 
 
