optimized possible mappings, duplicated components

--- a/tests/RefinementTest/Refinement.ipynb
+++ b/tests/RefinementTest/Refinement.ipynb
@@ -2,9 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VariantID</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Event</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EventID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         VariantID Position Event\n",
+       "EventID                          \n",
+       "0                0        0     a\n",
+       "1                0        1     b\n",
+       "2                0        2     c\n",
+       "3                1        0     a\n",
+       "4                1        1     b\n",
+       "5                1        2     b\n",
+       "6                2        0     a\n",
+       "7                2        1     c\n",
+       "8                2        2     c"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "import DBTool as DB\n",
@@ -42,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, {'curLabel': 'a', 'newLabel': 'a1'}), (1, {'curLabel': 'b', 'newLabel': 'b1'}), (2, {'curLabel': 'c', 'newLabel': 'c'}), (3, {'curLabel': 'a', 'newLabel': 'a1'}), (4, {'curLabel': 'b', 'newLabel': 'b1'}), (5, {'curLabel': 'b', 'newLabel': 'b1'})] \n",
+      "\n",
+      "[(8, {'curLabel': 'c', 'newLabel': 'c'}), (6, {'curLabel': 'a', 'newLabel': 'a2'}), (7, {'curLabel': 'c', 'newLabel': 'c'})] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Dummy tests Graph\n",
     "G = nx.Graph()\n",
@@ -84,11 +205,15 @@
     "    #Remove edges with 'weight' == -1\n",
     "    G.remove_edges_from([(u,v) for (u,v,d) in G.edges(data=True) if d['weight'] == -1])\n",
     "    \n",
-    "    #1st find nodes with candidate labels, 2nd find connected components of each node, 3rd remove duplicate connected components \n",
-    "    #since two connected nodes may have equal connected components   \n",
-    "    return {label : [list(cc) for cc in set([tuple(nx.node_connected_component(G, cnode[0]))\n",
-    "                                 for cnode in filter(lambda node: node[1]['curLabel'] == label, G.nodes(data=True))])]\n",
-    "                                     for label in candidateLabels}\n",
+    "    components = [list(cc) for cc in nx.connected_components(G)]\n",
+    "    d = {label: [] for label in candidateLabels}\n",
+    "\n",
+    "    for cc in components:\n",
+    "        label = G.node[cc[0]]['curLabel']\n",
+    "        if label in d:\n",
+    "            d[label].append(cc)\n",
+    "    return d\n",
+    "    \n",
     "\n",
     "\n",
     "#Get the size of the largest component given a connectedComponents dictionary\n",
@@ -200,20 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(1, 2)}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set([(1,2),(1,2)])"
    ]
