--- a/tests/mappings.ipynb
+++ b/tests/mappings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
    ],
    "source": [
     "import itertools as it\n",
+    "from collections import defaultdict\n",
     "\n",
     "#Two variants: [(eventID,\"event\"),...]\n",
     "v1 = [(0,'A'),(1,'B'),(2,'B'),(3,'C'),(4,'D')]\n",
@@ -49,19 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[(0, 5), (1, 6), (3, 7), (4, 9)],\n",
-       " [(0, 5), (2, 6), (3, 7), (4, 9)],\n",
        " [(0, 5), (1, 6), (3, 8), (4, 9)],\n",
+       " [(0, 5), (2, 6), (3, 7), (4, 9)],\n",
        " [(0, 5), (2, 6), (3, 8), (4, 9)]]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +70,12 @@
    "source": [
     "#improved version, tested for huge number of variants and events\n",
     "m = [(b,(a,c)) for (a,b) in v1 for (c,d) in v2 if b == d]\n",
-    "d = {i: [] for i in s1.intersection(s2)}\n",
+    "d = defaultdict(list)\n",
     "\n",
-    "for (k, v) in m:\n",
-    "    if k in d:\n",
-    "        d[k].append(v)\n",
+    "for k,v in m:\n",
+    "    d[k].append(v)\n",
     "\n",
-    "[sorted(list(d), key = lambda p: p[0]) for d in (it.product(*d.values()))]"
+    "[list(d) for d in (it.product(*d.values()))]"
    ]
   },
   {
